2025-05-05T12:52:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14836895653 # 958
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-05
* notice: last 14d: unq all: 20 82
* notice: prev accum: outdated-unq outdated-all / unq all: 1054 5397 / 1075 5478
* notice: next accum: outdated-unq outdated-all / unq all: 1054 5397 / 1076 5479
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-05]

2025-05-05T02:06:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14827669005 # 957
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-05
* notice: last 14d: unq all: 20 81
* notice: prev accum: outdated-unq outdated-all / unq all: 1054 5397 / 1071 5463
* notice: next accum: outdated-unq outdated-all / unq all: 1054 5397 / 1075 5478
* notice: prev exec diff / last date diff / accum: unq all: +4 +15 -0 -0 / +5 +16 -0 -0 / 5 16
* notice: removed / changed dates: [] / [2025-05-04]

2025-05-04T12:47:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14821374643 # 956
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
* notice: last 14d: unq all: 16 66
* notice: prev accum: outdated-unq outdated-all / unq all: 1054 5397 / 1070 5462
* notice: next accum: outdated-unq outdated-all / unq all: 1054 5397 / 1071 5463
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-04]

2025-05-02T02:02:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14787195394 # 951