@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-05T12:52:48Z",
+  "timestamp" : "2025-05-06T02:03:15Z",
   "count_outdated" : 5397,
   "uniques_outdated" : 1054,
-  "count" : 5479,
-  "uniques" : 1076,
+  "count" : 5483,
+  "uniques" : 1077,
   "views" : [
     {
       "timestamp": "2025-04-22T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
