@@ -1,6 +1,6 @@
 {
-  "count": 82,
-  "uniques": 20,
+  "count": 86,
+  "uniques": 21,
   "views": [
     {
       "timestamp": "2025-04-22T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 5,
+      "uniques": 2
     }
   ]
 }
