@@ -1,3 +1,12 @@
+2025-05-06T02:03:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14850121961 # 959
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-06
+* notice: last 14d: unq all: 21 86
+* notice: prev accum: outdated-unq outdated-all / unq all: 1054 5397 / 1076 5479
+* notice: next accum: outdated-unq outdated-all / unq all: 1054 5397 / 1077 5483
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +2 +5 -0 -0 / 2 5
+* notice: removed / changed dates: [] / [2025-05-05]
+
 2025-05-05T12:52:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14836895653 # 958
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-05
